--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <body>
     <div class="container">
         <h1>Kecskeméti Baptista Gyülekezet dalszöveg alkalmazása</h1>
-        <a class="downloadBtn" href="/apk/kbgy_enekek_1.3.apk"><i class="fa fa-download"></i>
+        <a class="downloadBtn" href="apk/kbgy_enekek_1.3.apk"><i class="fa fa-download"></i>
             KBGY Énekek 1.3
             (Android)</a>
     </div>
