The date is shown next to the version numbers

--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
 
         h1 {
             font-size: 1.7em;
+            margin-top: 2em;
+        }
+
+        h2 {
+            font-size: 1.3em;
+        }
+
+        .btnDate {
+            font-size: 0.8em;
+            padding-top: 0.6em;
         }
 
         @media screen and (max-width: 600px) {
@@ -67,9 +77,9 @@
 <body>
     <div class="container">
         <h1>Kecskeméti Baptista Gyülekezet dalszöveg alkalmazása</h1>
-        <a class="downloadBtn" href="apk/kbgy_enekek_1.3.apk"><i class="fa fa-download"></i>
-            KBGY Énekek 1.3
-            (Android)</a>
+        <a class="downloadBtn" href="apk/kbgy_enekek_1.3.apk"><i class="fa fa-download"></i>KBGY Énekek 1.3 (Android)
+            <div class="btnDate">2021.06.24.</div>
+        </a>
     </div>
     <h1>Telepítés</h1>
     <p>Első telepítés előtt engedélyezni kell az ismeretlen alkalmazások telepítését. (Ha még nincs engedélyezve, a fájl
@@ -77,25 +87,26 @@
         dob, hogy "nem ismert az alkalmazás fejlesztője" vagy hasonló, attól nem kell megijedni.</p>
     <p><b>Rendszerkövetelmény: Android 5.0 és újabb</b></p>
     <h1>Változások</h1>
-    <h2>1.3</h2>
+    <h2>2021.06.24. - v1.3</h2>
     <ul>
         <li>A keresés találatait jobb sorrendben jeleníti meg</li>
         <li>Hibajavítások</li>
     </ul>
-    <h2>1.2</h2>
+    <h2>2021.05.31. - v1.2</h2>
     <ul>
         <li>Frissített dal gyűjtemény</li>
         <li>Új görgetősáv a gyorsabb navigáláshoz</li>
         <li>A képernyő nem alszik el amikor egy dalt néztek</li>
         <li>Hibajavítások</li>
     </ul>
-    <h2>1.1</h2>
+    <h2>2020.09.30. - v1.1</h2>
     <ul>
         <li>Új keresés (a dalok szövegében és címében egyránt keres)</li>
         <li>Frissített dal gyújtemény</li>
         <li>Minimum rendszerkövetelmény csökkentve Android 5.0-ra</li>
         <li>Hibajavítások</li>
     </ul>
+    <h2>2020.08.23. - v1.0</h2>
 </body>
 
 </html>
