--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
         body {
             background-color: #e0f2f1;
             font-family: 'Montserrat', sans-serif;
-            padding: 1em;
+            padding: 1.5em;
         }
 
         .container {
             text-align: center;
+        }
+
+        .title {
+            margin-top: 0;
         }
 
         .downloadBtn {
@@ -76,7 +80,7 @@
 
 <body>
     <div class="container">
-        <h1>Kecskeméti Baptista Gyülekezet dalszöveg alkalmazása</h1>
+        <h1 class="title">Kecskeméti Baptista Gyülekezet dalszöveg alkalmazása</h1>
         <a class="downloadBtn" href="apk/kbgy_enekek_1.3.apk"><i class="fa fa-download"></i>KBGY Énekek 1.3 (Android)
             <div class="btnDate">2021.06.24.</div>
         </a>
