padding adjusted on mobile

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
         }
 
         @media screen and (max-width: 600px) {
+            body {
+                padding: 0.8em;
+            }
+
             button {
                 width: 100%;
             }
@@ -93,14 +97,14 @@
     <h1>Változások</h1>
     <h2>2021.06.24. - v1.3</h2>
     <ul>
-        <li>A keresés találatait jobb sorrendben jeleníti meg</li>
+        <li>A szám alapú keresés találatait logikusabban jeleníti meg.</li>
         <li>Hibajavítások</li>
     </ul>
     <h2>2021.05.31. - v1.2</h2>
     <ul>
         <li>Frissített dal gyűjtemény</li>
         <li>Új görgetősáv a gyorsabb navigáláshoz</li>
-        <li>A képernyő nem alszik el amikor egy dalt néztek</li>
+        <li>A képernyő nem alszik el amikor egy dalt nézel</li>
         <li>Hibajavítások</li>
     </ul>
     <h2>2020.09.30. - v1.1</h2>
